# fmpsdk

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_coverage.py  test.bash  test_plan.md  test_simple.bash  update_return_types.py
.github/workflows/: test.yml
fmpsdk/: __init__.py  alternative_data.py  analyst.py  bulk.py  calendar.py  calendar_module.py  chart.py  commitment_of_traders.py  commodities.py  commodity.py  company.py  company_valuation.py  crypto.py  cryptocurrencies.py  directory.py  discounted_cash_flow.py  earnings_transcript.py  economic_indicators.py  economics.py  esg.py  etf.py  euronext.py  exceptions.py  forex.py  form13f.py  fundraising.py  general.py  indexes.py  insider_trades.py  insider_trading.py  institutional_fund.py  market_hours.py  market_indexes.py  market_performance.py  model_registry.py  models.py  mutual_funds.py  news.py  quote.py  search.py  (+10 more)
tests/: __init__.py  conftest.py  test_alternative_data.py  test_analyst.py  test_bulk.py  test_calendar.py  test_calendar_module.py  test_chart.py  test_commitment_of_traders.py  test_commodity.py  test_company.py  test_company_valuation.py  test_core.py  test_crypto.py  test_cryptocurrencies.py  test_directory.py  test_discounted_cash_flow.py  test_earnings_transcript.py  test_economic_indicators.py  test_economics.py  test_endpoints.py  test_esg.py  test_etf.py  test_forex.py  test_form13f.py  test_fundraising.py  test_general.py  test_indexes.py  test_insider_trades.py  test_insider_trading.py  test_institutional_fund.py  test_integration_endpoints.py  test_market_hours.py  test_market_performance.py  test_models.py  test_mutual_funds.py  test_news.py  test_quote.py  test_search.py  test_sec_filings.py  (+7 more)
