[tool.poetry]
name = "fmpsdk"
version = "20250102.0"
description = ""
authors = ["Dax Mickelson <github@daxm.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
python-dotenv = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Automatically retry tests that fail with rate limit errors
addopts = "--reruns 3 --reruns-delay 2"
# Only rerun on specific error patterns
testpaths = ["tests"]
markers = [
    "rate_limited: mark test as potentially rate limited",
    "integration: mark test as integration test requiring API key",
    "slow: mark test as slow running"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
